# unify

./: LICENSE  README.md  ref.cabal  unify.cabal
examples/unify-hm/: Main.hs
examples/unify-hm/Control/Monad/: Ident.hs  Name.hs
examples/unify-hm/Control/Monad/Ident/: Class.hs
examples/unify-hm/Control/Monad/Name/: Class.hs
examples/unify-hm/Control/Monad/Trans/: Ident.hs  Name.hs
examples/unify-hm/Data/: Flip.hs  Index.hs  Stream.hs
examples/unify-hm/Data/Stream/: Do.hs
examples/unify-hm/Language/HM/: Exp.hs  InferType.hs  Parse.hs  Rename.hs  Syntax.hs  Token.hs  Type.hs  TypeCheck.hs  Var.hs
examples/unify-hm/Language/HM/DM/: Exp.hs  InferType.hs  Parse.hs  Rename.hs  Type.hs  TypeCheck.hs
examples/unify-hm/Language/HM/Lex/: Internal.x
examples/unify-hm/Language/HM/Parse/: Internal.y
examples/unify-main/: Main.hs
src/: Main.hs
src/Control/Monad/: Disj.hs  Ref.hs  Unify.hs  Wrap.hs
src/Control/Monad/Error/: Wrap.hs
src/Control/Monad/Ref/: Class.hs  Hashable.hs  Integer.hs  Show.hs
src/Control/Monad/Trans/: Disj.hs  Unifier.hs  Wrap.hs
src/Control/Monad/Trans/Error/: Wrap.hs
src/Control/Monad/Trans/Ref/: Int.hs  Integer.hs
src/Control/Monad/Trans/Unifier/: Base.hs  Either.hs  Map.hs  Set.hs
src/Control/Monad/Unify/: Base.hs  Map.hs  Set.hs
src/Data/: Fix.hs
src/Data/Map/Strict/: Class.hs
src/Data/Set/: Class.hs
