name: unify
version: 0.1

-- A short (one-line) description of the package.
-- Synopsis:            

-- A longer description of the package.
-- Description:         

license: BSD3
license-file: LICENSE
author: Andy Sonnenburg
maintainer: andy22286@gmail.com

-- A copyright notice.
-- Copyright:           

category: Control
build-type: Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
extra-source-files: README
cabal-version: >= 1.8

library
  hs-source-dirs: src
  build-depends:
    base,
    transformers,
    mtl,
    hashable,
    unordered-containers >= 0.2.1.0,
    free
  exposed-modules:
    Control.Monad.Disj
    Control.Monad.Error.Wrap
    Control.Monad.Ref.Class
    Control.Monad.Ref
    Control.Monad.Ref.Hashable
    Control.Monad.Trans.Disj
    Control.Monad.Trans.Error.Wrap
    Control.Monad.Trans.Ref.Int
    Control.Monad.Trans.Wrap
    Control.Monad.Unify
    Control.Monad.Wrap
    Data.Fix
  ghc-options: -Wall
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

executable unify-main
  hs-source-dirs: examples/unify-main
  main-is: Main.hs
  build-depends: base, unify
  ghc-options: -Wall

executable unify-hm
  hs-source-dirs: examples/unify-hm
  main-is: Main.hs
  other-modules:
    Language.HM.Lex.Internal
  build-depends:
    base,
    array,
    transformers,
    mtl,
    hashable,
    unordered-containers >= 0.2.1.0,
    free,
    tagged,
    unify
  ghc-options: -Wall
  build-tools: alex, happy
