name: unify
version: 0.1.0.0
cabal-version: >= 1.10
synopsis: unify
description: unify
license: BSD3
license-file: LICENSE
author: Andy Sonnenburg
maintainer: Andy Sonnenburg <andy22286@gmail.com>
category: Control
homepage: http://github.com/sonyandy/unify
bug-reports: http://github.com/sonyandy/unify/issues
build-type: Simple

source-repository head
  type: git
  location: git://github.com/sonyandy/unify.git

library
  default-language: Haskell98
  hs-source-dirs: src
  build-depends:
    base,
    transformers,
    mtl,
    catch-fd >= 0.2,
    hashable,
    unordered-containers >= 0.2.1.0
  exposed-modules:
    Control.Monad.Disj
    Control.Monad.Error.Wrap
    Control.Monad.Ref
    Control.Monad.Ref.Class
    Control.Monad.Ref.Hashable
    Control.Monad.Ref.Integer
    Control.Monad.Trans.Disj
    Control.Monad.Trans.Error.Wrap
    Control.Monad.Trans.Ref.Integer
    Control.Monad.Trans.Wrap
    Control.Monad.Unify
    Control.Monad.Wrap
    Data.Fix
  ghc-options: -Wall

executable unify-main
  hs-source-dirs: examples/unify-main
  main-is: Main.hs
  build-depends: base, ref-fd, unify
  ghc-options: -Wall
